[package]
name = "namdong"
version = "0.1.0"
edition = "2024"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
[dependencies]
eframe = "0.29.1"
thirtyfour = "0.32.0-rc.9"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
calamine = "0.21.1"
xlsxwriter = "0.6.1"
image = "0.24"
reqwest = "0.12.12"